--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
 </div>
 <customfooter></customfooter>
 <p-confirmDialog header="{{ 'Confirmation' | translate }}" acceptLabel="{{ 'Yes' | translate }}" rejectLabel="{{ 'No' | translate }}" class="fa fa-question-circle" [responsive]="true"></p-confirmDialog>
-<p-growl></p-growl>
+<p-toast></p-toast>
